app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .no-scrollbar::-webkit-scrollbar {
      display: none;
  }

  .no-scrollbar {
      -ms-overflow-style: none;
      scrollbar-width: none;
  }
}

html {
  background-color: black;
  color: white;
}

html,
body {
  height: 100%;
  width: 100%;
}

